manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: azure-vote-back
        image: acrdolly.azurecr.io/library/redis:latest
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azurevotefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azurevotefront
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: azurevotefront
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      hostAliases:
      - ip: "40.117.74.8"
      hostnames:
      - "hello.example.com"
      containers:
      - name: azurevotefront
        image: acrdolly.azurecr.io/azurevotefront:v1
        ports:
        - containerPort: 80
        command:
        - cat
        args:
        - "/etc/hosts"
        resources:
          requests:
            cpu: 500m
          limits:
            cpu: 1500m
