manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
spec:
  ports:
  - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: v1
kind: Service
metadata:
  name: azurevotefront
spec:
  type: LoadBalancer
  ports:
  - port: 80 
  selector:
    app: azurevotefront
